# hercules_new

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: continuous-integration-workflow.yaml  deploy-pages.yaml
docs/: _config.yml  _toc.yml  adding_components.md  battery.md  combined_cycle_gas_turbine.md  component_types.md  contribute.md  electrolyzer.md  emulator.md  examples_overview.md  gridstatus_download.md  h_dict.md  hard_coal_steam_turbine.md  hercules_input.md  hercules_model.md  hybrid_plant.md  index.md  install.md  key_concepts.md  open_cycle_gas_turbine.md  order_of_op.md  output_files.md  power_playback.md  resource_downloading.md  running_hercules.md  solar_pv.md  thermal_component_base.md  thermal_plant.md  timing.md  units.md  wind.md
docs/examples/: 00_wind_farm_only.md  00b_wind_farm_scada_power.md  00c_power_playback.md  01_wind_farm_dof1_model.md  02a_wind_farm_realistic_inflow.md  02b_wind_farm_realistic_inflow_precom_floris.md  02c_wind_farm_realistic_inflow_direct.md  03_wind_and_solar.md  04_wind_and_storage.md  05_wind_and_storage_with_lmp.md  06_wind_and_hydrogen.md  07_open_cycle_gas_turbine.md  08_combined_cycle_gas_turbine.md  09_multiunit_thermal_plant.md
docs/not_used/: install_instructions.md  install_on_kestrel.md  install_spack.md
examples/: amr-wind_buildme.sh  hercules_input_example.yaml  hercules_output_example.py  readme.txt
examples/00_wind_farm_only/: README.md  hercules_input.yaml  hercules_runscript.py  plot_outputs.py
examples/00b_wind_farm_scada_power/: hercules_input.yaml  hercules_runscript.py  plot_outputs.py
examples/00c_power_playback/: hercules_input.yaml  plot_outputs.py
examples/01_wind_farm_dof1_model/: README.md  hercules_input.yaml  hercules_runscript.py  plot_outputs.py
examples/02_wind_farm_realistic_inflow/: hercules_input.yaml  (+2 more)
hercules/: __init__.py  component_registry.py  emulator.py  hercules_model.py  hercules_output.py  hybrid_plant.py  utilities.py  utilities_examples.py
tests/: battery_simple_test.py  combined_cycle_gas_turbine_test.py  electrolyzer_plant_test.py  emulator_test.py  grid_utilities_test.py  hard_coal_steam_turbine_test.py  hercules_model_test.py  hercules_output_test.py  hybrid_plant_test.py  open_cycle_gas_turbine_test.py  power_playback_test.py  solar_pysam_pvwatts_test.py  test_version_sync.py  thermal_component_base_test.py  thermal_plant_test.py  utilities_test.py  wind_farm_direct_test.py  wind_farm_dynamic_floris_test.py  wind_farm_precom_floris_test.py  wind_farm_scada_power_test.py  wind_meso_to_power_precom_floris_test.py  wind_meso_to_power_test.py
timing_tests/: 00_generate_wind_input.py  01_generate_solar_input.py  02_plot_wind_solar_data.py  03_run_wind_timing_test.py  03b_run_wind_precom_timing_test.py  04_run_solar_timing_test.py  README.md  __init__.py  hercules_input_solar.yaml  hercules_input_wind.yaml  hercules_input_wind_precom.yaml  timing_results.csv  utilities.py
(+102 files in other folders)
